# gt4py

./: .bumpversion.cfg  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .python-version  .python-versions  .vscode  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CLAUDE.md  CODING_GUIDELINES.md  CODING_GUIDELINES.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Development-guidelines.md  Dockerfile  Fix_concat_where_start_stop_invariant.md  HEADER.txt  LICENSE.txt  LICENSE_HEADER.txt  MANIFEST.in  README.md  README.rst  REVIEW_CHECKLIST.rst  TODO  _local_rearrange_repo.sh  _local_refactor_imports.sh  bors.toml  codecov.yml  constraints.txt  dev-scripts.py  dev-tasks.py  (+30 more)
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: copilot-instructions.md  pull_request_template.md
.gitpod/: aliases.txt
.license_headers/: eve_license_header.txt  gt4py_license_header.txt  gtc_license_header.txt
.opencode/: opencode.jsonc
_dacegraphs/: invalid.sdfgz
_local/: pyproject.toml
ci/: Dockerfile  _cscs-ci.yml  base-cuda.Dockerfile  base-rocm.Dockerfile  base.Dockerfile  base_cuda12.Dockerfile  beverin-alps-cscs.yaml  cartesian.yml  checkout.Dockerfile  coverage_info_to_env.py  cscs-ci-base.yml  cscs-ci-dace-determinism.yml  cscs-ci-ext-config.yml  cscs-ci.yml  cscs-common.yml  cscs-pipeline.yml  cscs-test-template.yaml  cscs-test-template.yml  images.yml  install_cuda_driver.sh  set_github_status.sh  storage.yml  tds-ci-config.yml  test-sessions.yml  tests.yml
docs/: .gitignore  Makefile  apiref.rst  build.sh  commandline.rst  conf.py  gtscript.rst  index.rst  lang_design.rst  quickstart.rst
examples/: README.md  demo_burgers.ipynb  demo_copy.py  demo_duck_storage.ipynb  demo_horizontal_diffusion.ipynb  demo_ir.ipynb  demo_isentropic_diagnostics.ipynb  demo_lap.py  gtcpp_hdiff.py  lap_cartesian_vs_next.ipynb  matmul.py  tmp_gtcpp.py
my_playground/: map_fusion_test.py  my_stuff.py  nabla4.py  nambla4.py  simple_icon_mesh.py
scripts/: README.md  __init__.py  __main__.py  _common.py  _sessions.py  cscs_ci.py  dace_deterministic_codegen.py  github_ci.py  nox_sessions.py  run  test  test_sessions.py  update.py
src/: __init__.py
src/gtc_unstructured/cpp_util/unstructured/: .clang-format  .gitignore  CMakeLists.txt  atlas_field_converter.cc  atlas_field_converter.cu  atlas_mesh_adapter.cc  prototype.cc
src/gtc_unstructured/cpp_util/unstructured/include/gridtools/next/: atlas_adapter.hpp  atlas_array_view_adapter.hpp  atlas_field_util.hpp  cuda_util.hpp  mesh.hpp  tmp_storage.hpp  unstructured.hpp
src/gtc_unstructured/cpp_util/unstructured/include/gridtools/next/test_helper/: field_builder.hpp  simple_mesh.hpp
src/gtc_unstructured/cpp_util/unstructured/include/gridtools/usid/: atlas.hpp  cuda_helpers.hpp  dim.hpp  domain.hpp  helpers.hpp  icon.hpp  naive_helpers.hpp
src/gtc_unstructured/cpp_util/unstructured/include/gridtools/usid/test_helper/: field_builder.hpp  simple_mesh.hpp
src/gtc_unstructured/cpp_util/unstructured/tests/: CMakeLists.txt
src/gtc_unstructured/cpp_util/unstructured/tests/include/util/: atlas_util.hpp
src/gtc_unstructured/cpp_util/unstructured/tests/regression/fvm_nabla/: CMakeLists.txt  driver.hpp  nabla_cuda.hpp  nabla_naive.cpp  nabla_naive.hpp
src/gtc_unstructured/cpp_util/unstructured/tests/unit_tests/: CMakeLists.txt
src/gtc_unstructured/cpp_util/unstructured/tests/unit_tests/next/: CMakeLists.txt  test_atlas_array_view_adapter.cc  test_atlas_field_util.cc  test_mesh.cc
src/gtc_unstructured/cpp_util/unstructured/tests/unit_tests/next/test_helper/: CMakeLists.txt  test_field_builder.cc  test_simple_mesh.cc
tasks/: __init__.py  _common.py  update.py
tests/: __init__.py  analysis_setup.py  conftest.py  definition_setup.py  definitions.py  perftest.py  storage_test_utils.py  test_build.py  test_cli.py  test_gtsimport.py  utils.py
tests/functional_tests/cpp_backend_tests/: CMakeLists.txt  anton_lap.py  anton_lap_driver.cpp  copy_stencil.py  copy_stencil_driver.cpp  copy_stencil_field_view.py  copy_stencil_field_view_driver.cpp  fvm_nabla.py  fvm_nabla_driver.cpp  pytest.ini  simple_mesh.hpp  slice_sparse.py  slice_sparse_driver.cpp  test_driver.py  tridiagonal_solve.py  tridiagonal_solve_driver.cpp
tests/functional_tests/cpp_backend_tests/build_naive/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  anton_lap  cmake_install.cmake  copy_stencil  copy_stencil_field_view  fvm_nabla  generated_anton_lap.hpp  generated_copy_stencil.hpp  generated_copy_stencil_field_view.hpp  generated_fvm_nabla.hpp  generated_tridiagonal_solve.hpp  tridiagonal_solve
tests/functional_tests/cpp_backend_tests/build_naive/Testing/Temporary/: CTestCostData.txt
tests/gtc_unstructured_tests/regression/cpp/: .gitignore  CMakeLists.txt  FetchGoogleTest.cmake  cell2cell.py  cell2cell_driver.cc  cell2cell_sparse.py  cell2cell_sparse_gtir.py  copy_with_k.py  copy_with_k_driver.cc  copy_with_k_gtir.py  fvm_nabla.py  fvm_nabla_driver.cc  fvm_nabla_driver.hpp  generator.py  k_fields.py  native_functions.py  native_functions_driver.cc  neighbor_loop_merge.py  sparse_assign.py  sparse_assign_driver.cc  sparse_assign_gtir.py  sparse_diamond_icon.py  stencil_01.py  stencil_05.py  tmp_field.py  tmp_field_driver.cc  vertex2edge.py  vertex2edge_diamond.py  vertex2edge_driver.cc  vertex2edge_gtir.py  weights.py  weights_driver.cc  weights_gtir.py
tests/gtc_unstructured_tests/regression/cpp/fortran/: .gitignore  CMakeLists.txt  driver.f90  vertex2edge_wrapper.cc  vertex2edge_wrapper.cu
tests/gtc_unstructured_tests/regression/cpp/gtir/: CMakeLists.txt  driver.hpp  fvm_nabla_gtir.py  nabla_cuda.cu  nabla_cuda.hpp  nabla_naive.cpp  nabla_naive.hpp
tests/gtc_unstructured_tests/regression/cpp/usid/: .gitignore  CMakeLists.txt  fvm_nabla_usid.py  nabla_cuda.hpp  nabla_naive.cpp  nabla_naive.hpp
tests/test_gtc_unstructured/regression/cpp/usid/: .gitignore  CMakeLists.txt
tools/: check_dace_pattern_node_usage.py
v1.0/: .buildinfo  (+14 more)
(+2600 files in other folders)
